# ai-trader

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  dashboard.py  docker-compose.yml  env.example  go  requirements.txt  x.ps1  xauusd_analyzer.py
backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  90a256fa371c_initial_schema.py  a3f1b2c4d5e6_add_ban_fields_and_login_activity.py  b4e7f8a9c0d1_add_plans_modules_credits.py  c5d6e7f8a9b0_add_user_id_to_trades.py
backend/app/: main.py
backend/app/api/v1/: ai_providers.py  auth.py  health.py  plans.py  platforms.py  router.py  trades.py  users.py  ws.py
backend/app/core/: access_control.py  config.py  database.py  dependencies.py  exceptions.py  geo.py  redis.py  security.py
backend/app/middleware/: cors.py  logging.py  rate_limit.py
backend/app/models/: __init__.py  ai_analysis.py  ai_provider.py  api_key.py  audit_log.py  bot_event.py  bot_settings.py  credit_balance.py  credit_transaction.py  login_activity.py  mcp_connection.py  module.py  plan.py  plan_module.py  platform.py  trade.py  user.py  user_subscription.py
backend/app/schemas/: ai_provider.py  auth.py  common.py  plan.py  trade.py  user.py
backend/app/services/: trade_service.py
backend/app/services/ai/: base.py  nvidia_nim.py  openrouter.py  registry.py
backend/app/workers/: celery_app.py  sync_worker.py
backend/tests/: conftest.py  test_e2e_auth.py  test_epic2.py  test_health.py
(+64 files in other folders)
